# vera

./: .gitignore  CHANGELOG.md  LAUNCH.md  LICENSE  PROMPT.md  README.md  install.sh  pyproject.toml
.github/scripts/: check_prompt_sync.py
.github/workflows/: ci.yml
docs/: index.html  wireframes.html
examples/: README.md  audit.md  audit.share.md  transcript.md
examples/live-demo/: README.md  audit.md  audit.share.md  transcript.md
launch/: BACKUP-CHANNELS.md  POSTS.md  READY-TO-PASTE.md  ship.sh
tests/: test_audit.py  test_captures.py  test_cost.py  test_provenance.py  test_prune.py  test_rules.py
vera/: audit.py  cli.py  config.py  llm.py  provenance.py  rules.py
