[project]
name = "vera-ai"
version = "0.1.0"
description = "The AI memory that argues with itself. Local-first. Model-agnostic. Every answer with a receipt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amit Patnaik" }]
keywords = ["ai", "memory", "agent", "second-brain", "audit", "provenance"]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.scripts]
vera = "vera.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vera"]
