[project]
name = "vera-clerk"
version = "0.1.1"
description = "Archived personal-discipline CLI pairing an LLM with a second-model auditor. Final release; no further development."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amit Patnaik" }]
keywords = ["ai", "memory", "agent", "second-brain", "audit", "provenance"]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vera = "vera.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vera"]
